refactor: prefer Stream.toList() over Collectors.toList()